example_name  = particles_ex1
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/particles/ex1
data          = particles_ex1.C run.sh
sources       = $(data) run.sh

CLEANFILES =

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
