example_name  = particles_ex2
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/particles/ex2
data          = particles_ex2.C run.sh
sources       = $(data) run.sh

CLEANFILES =

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
