example_name  = particles_ex3

install_dir   = $(examples_install_path)/particles/ex3
data          = particles_ex3.C run.sh
sources       = $(data) run.sh
CLEANFILES    = 

check_SCRIPTS = run.sh


##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
